+ Adding profile index placeholder and making it default login target

--- a/src/Dahlberg/PodrBundle/Resources/config/routing.yml
+++ b/src/Dahlberg/PodrBundle/Resources/config/routing.yml
@@ -6,6 +6,10 @@ account_create:
     path:     /account/create
     defaults: { _controller: DahlbergPodrBundle:Account:create }
 
+account_index:
+    path:     /account
+    defaults:  { _controller: DahlbergPodrBundle:Account:index }
+
 account_login:
     path:     /login
     defaults:  { _controller: DahlbergPodrBundle:Account:login }
