--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,11 +17,11 @@ security:
     firewalls:
         main:
             anonymous: ~
-            default_target_path: root
             form_login:
-                login_path:  account_login
                 check_path:  account_login_check
                 csrf_provider: form.csrf_provider
+                default_target_path: account_index
+                login_path:  account_login
             logout: ~
             pattern:    ^/
             remember_me:
