--- a/src/Dahlberg/PodrBundle/Resources/config/routing.yml
+++ b/src/Dahlberg/PodrBundle/Resources/config/routing.yml
@@ -1,6 +1,11 @@
+# Default
 root:
     pattern:  /
     defaults: { _controller: DahlbergPodrBundle:Default:index }
+
+dashboard:
+    pattern:  /dashboard
+    defaults: { _controller: DahlbergPodrBundle:Default:dashboard }
 
 # Account
 account_create:
