--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,3 +72,5 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+nelmio_api_doc: ~
