--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,4 +73,8 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+fos_rest:
+    routing_loader:
+        default_format: json
+
 nelmio_api_doc: ~
