--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,11 @@ dahlberg_podr:
     resource: "@DahlbergPodrBundle/Resources/config/routing.yml"
     prefix:   /
 
+dahlberg_api:
+    type: rest
+    resource: "@DahlbergPodrBundle/Resources/config/routing-api.yml"
+    prefix:   /api
+
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
