--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,7 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0",
-        "friendsofsymfony/rest-bundle": "1.1.*",
-	    "nelmio/api-doc-bundle": "@stable"
-    },
-    "require-dev": {
-	"jms/serializer": "0.*",
-	"jms/serializer-bundle": "dev-master"
+        "incenteev/composer-parameter-handler": "~2.0"
     },
     "scripts": {
         "post-install-cmd": [
