--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,7 +38,7 @@ assetic:
     filters:
         coffee:
             bin: /usr/bin/coffee
-            node: /usr/bin/node
+            node: /usr/bin/nodejs
             node_paths: [ /usr/lib/node_modules/ ]
             apply_to: "\.coffee$"
         cssrewrite: ~
