+ Adding "started played" to dashboard + Adding a Twig Extension for handling custom filers. First filter is secondsToTimeFilter

--- a/src/Dahlberg/PodrBundle/Resources/config/services.yml
+++ b/src/Dahlberg/PodrBundle/Resources/config/services.yml
@@ -5,3 +5,7 @@ services:
 #    dahlberg_podr.example:
 #        class: %dahlberg_podr.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+  dahlberg_podr.twig.podr_extension:
+    class: Dahlberg\PodrBundle\Twig\PodrExtension
+    tags:
+        - { name: twig.extension }
