--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -28,12 +28,15 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form:
+        resources:
+            - '::form.html.twig'
 
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [DahlbergPodrBundle]
     #java: /usr/bin/java
     filters:
         coffee:
