--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -45,6 +45,13 @@ assetic:
             node_paths: [ /usr/lib/node_modules/ ]
             apply_to: "\.coffee$"
         cssrewrite: ~
+        lessphp:
+            apply_to: "\.less$"
+            # Formatter options: compressed, lessjs, classic
+            formatter: "compressed"
+            preserve_comments: false
+            presets:
+                my_variable: "#000"
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
